load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "transport",
    hdrs = ["transport.h"],
    srcs = ["transport.cc"],
    deps = ["@fmt"]
)

cc_test(
    name = "transport_test",
    srcs = ["test/transport_test.cc"],
    deps = [
        ":transport",
        "@gtest//:gtest_main",
    ],
    size = "small",  # ...for now.
)
